--- a/src/Assets/Styles/_mixins.scss
+++ b/src/Assets/Styles/_mixins.scss
@@ -3,3 +3,20 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin background {
+  background-image: url("../Images/background.jpg");
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
+@mixin logo {
+  font-family: $logo-font;
+  font-size: 3rem;
+}
+
+@mixin text {
+  font-family: $body-font;
+  font-size: 2rem;
+}
