--- a/src/Assets/Styles/styles.css
+++ b/src/Assets/Styles/styles.css
@@ -6,10 +6,10 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
   background-image: url("../Images/background.jpg");
   background-size: cover;
+  height: 100vh;
+  width: 100vw;
 }
 .Menu .container {
   border: 0.5rem solid wheat;
@@ -20,19 +20,48 @@ body {
   color: wheat;
   background-color: rgba(245, 222, 179, 0.2);
 }
-.Menu .container .hello {
+.Menu .container .logo {
   font-family: "Lobster Two", cursive;
-  margin-top: 20%;
   font-size: 3rem;
+  margin-top: 20%;
 }
 .Menu .container .button {
   font-family: "Raleway", sans-serif;
+  font-size: 2rem;
   margin-bottom: 20%;
   height: 3rem;
   width: 7rem;
   border: none;
   background-color: transparent;
-  font-size: 2rem;
   border-radius: 5%;
   color: wheat;
+  text-decoration: none;
+}
+
+.Game {
+  background-image: url("../Images/background.jpg");
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+}
+
+.NavBar {
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  display: flex;
+  flex-direction: row;
+  color: wheat;
+  height: 3rem;
+  width: 100vw;
+}
+.NavBar .timer {
+  margin: 1rem auto 0 3rem;
+}
+.NavBar .logo {
+  font-family: "Lobster Two", cursive;
+  font-size: 3rem;
+  margin: 1rem auto 0 auto;
+}
+.NavBar .restart {
+  margin: 1rem 3rem 0 auto;
 }/*# sourceMappingURL=styles.css.map */
