--- a/src/Assets/Styles/styles.scss
+++ b/src/Assets/Styles/styles.scss
@@ -7,10 +7,7 @@ body {
 
 .Menu {
   @include flex-center;
-  height: 100vh;
-  width: 100vw;
-  background-image: url("../Images/background.jpg");
-  background-size: cover;
+  @include background;
 
   .container {
     border: 0.5rem solid $primary;
@@ -20,21 +17,44 @@ body {
     text-align: center;
     color: $primary;
     background-color: rgba($color: $primary, $alpha: 0.2);
-    .hello {
-      font-family: $logo-font;
+    .logo {
+      @include logo;
       margin-top: 20%;
-      font-size: 3rem;
     }
     .button {
-      font-family: $body-font;
+      @include text;
       margin-bottom: 20%;
       height: 3rem;
       width: 7rem;
       border: none;
       background-color: transparent;
-      font-size: 2rem;
       border-radius: 5%;
       color: $primary;
+      text-decoration: none;
     }
+  }
+}
+
+.Game {
+  @include background;
+}
+
+.NavBar {
+  @include text;
+  display: flex;
+  flex-direction: row;
+  color: $primary;
+  height: 3rem;
+  width: 100vw;
+
+  .timer {
+    margin: 1rem auto 0 3rem;
+  }
+  .logo {
+    @include logo;
+    margin: 1rem auto 0 auto;
+  }
+  .restart {
+    margin: 1rem 3rem 0 auto;
   }
 }
