--- a/src/Assets/Styles/_mixins.scss
+++ b/src/Assets/Styles/_mixins.scss
@@ -20,3 +20,10 @@
   font-family: $body-font;
   font-size: 2rem;
 }
+
+@mixin card-dimensions {
+  height: 150px;
+  width: 110px;
+  border: 0.2rem solid rgba($color: $primary, $alpha: 0.3);
+  border-radius: 5%;
+}
