--- a/src/Styles/_mixins.scss
+++ b/src/Styles/_mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin background {
-  background-image: url("../Images/background.jpg");
+  background-image: url("../../public/Images/background.jpg");
   background-size: cover;
   height: 100vh;
   width: 100vw;
