Show cards from pile

--- a/src/Styles/_mixins.scss
+++ b/src/Styles/_mixins.scss
@@ -19,6 +19,8 @@
 @mixin text {
   font-family: $body-font;
   font-size: 2rem;
+  color: $primary;
+  text-decoration: none;
 }
 
 @mixin card-dimensions {
