--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -45,6 +45,10 @@ body {
   background-size: cover;
   height: 100vh;
   width: 100vw;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .NavBar {
