--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -62,9 +62,10 @@ body {
   height: 3rem;
   width: 100vw;
 }
-.NavBar .timer {
+.NavBar .filler {
   font-size: 1.5rem;
   margin: 1rem auto 0 4rem;
+  cursor: pointer;
 }
 .NavBar .logo {
   font-family: "Lobster Two", cursive;
@@ -75,6 +76,7 @@ body {
 .NavBar .restart {
   font-size: 1.5rem;
   margin: 1rem 0.5rem 0 auto;
+  cursor: pointer;
 }
 .NavBar .home {
   font-family: "Raleway", sans-serif;
@@ -83,6 +85,7 @@ body {
   text-decoration: none;
   font-size: 1.5rem;
   margin: 1rem 4rem 0 0.5rem;
+  cursor: pointer;
 }
 
 .Cards .card {
